Fix spacing of text posts on mobile

--- a/style.scss
+++ b/style.scss
@@ -309,8 +309,11 @@ video {
 }
 
 @include mobile {
+  .post {
+    padding-top: 1em;
+  }
+
   .thumbnail {
-    margin-top: 1em;
     margin-bottom: 0.5em;
     width: 100%;
     float: top;
